# twbus

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: bus-add.md  bus-list.md  bus-search.md  bus-status.md  bus-stop.md
docs/superpowers/plans/: 2026-05-14-twbus.md
docs/superpowers/specs/: 2026-05-14-twbus-design.md
plugins/twbus/.claude-plugin/: plugin.json
plugins/twbus/commands/: bus-list.md  bus-remove.md  bus-search.md  bus-status.md
plugins/twbus/skills/twbus/: SKILL.md
skills/twbus/: SKILL.md
skills/twbus/scripts/: _catalog.py  _cmds.py  _tdx.py  twbus.py
src/twbus/: __init__.py  __main__.py  catalog.py  cli.py  cmds.py  favs.py  formatting.py  tdx.py
tests/: conftest.py  test_add.py  test_catalog_load.py  test_catalog_normalize.py  test_cli_skeleton.py  test_env.py  test_favs.py  test_format.py  test_list.py  test_remove.py  test_search.py  test_status.py  test_stop.py  test_tdx_request.py  test_tdx_token.py
tests/fixtures/: eta_taipei_235.json  realtime_near_stop_taipei.json  stop_of_route_taipei.json  token_resp.json
