[project]
name = "twbus"
version = "0.1.0"
description = "Taiwan bus realtime skill plugin (TDX V3)"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: live TDX API; needs TDX_CLIENT_ID env"]
addopts = "-ra --strict-markers"
