[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "twbus"
version = "0.2.1"
description = "Taiwan bus realtime CLI (TDX V3)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "carlosli" }]
dependencies = ["certifi"]

[project.scripts]
twbus = "twbus.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: live TDX API; needs TDX_CLIENT_ID env"]
addopts = "-ra --strict-markers"
